removing some Lint issues